@@ -89,6 +89,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 508638  Self-hosting not working on FreeBSD
 508777  amd64-linux: add minimal scalar test
 508778  syscall-wrapper waitid warns about infop=null
+508779  PRE(sys_prlimit64): reorder check for memory validity
 508869  x86-linux: simplify scalar test output
 
 To see details of a given bug, visit
